style.css
/* Fonts */
@font-face {
  font-family: 'corleone';
  src: url(./metadata/fonts/corleone/corleone.ttf);
}
@font-face {
  font-family: 'corleoneDue';
  src: url(./metadata/fonts/corleone/corleoneDue.ttf);
}

/* Global Settings */
:root {
  --background: rgba(28, 27, 23, 1.0);
  --backgroundTranslucent: rgba(28, 27, 23, 0.69);
  --text: rgba(255, 255, 255, 0.88);
  --primary: rgba(235, 174, 94, 0.88);
  --primaryTranslucent: rgba(235, 174, 94, 0.69);
  --secondary: rgba(133,76,21, 1.0);
  --secondaryTranslucent: rgba(133,76,21, 0.8);
  --accent: rgba(190, 35, 21, 1.0);
  --accentTranslucent: rgba(190, 35, 21, 0.69);
}

.accent-text {
  color: var(--accent);
}
.primary-text {
  color: var(--primary);
}

.prevent-select {
  -webkit-user-select: none; /* Safari */
  -ms-user-select: none; /* IE 10 and IE 11 */
  user-select: none; /* Standard syntax */
}

.background-blur {
  backdrop-filter: blur(20px);
  -webkit-backdrop-filter: blur(20px);
}

.backdrop-shadow {
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.0),
                    0 22px 70px 4px rgba(0,0,0,0.55),
                    0 0 0 1px rgba(0, 0, 0, 0.0);
}

/* let page take full height of viewport excess */
html {height: 100%;} body {position: absolute; top: 0; bottom: 0; right: 0; left: 0;}

body {
  background-color: var(--background);
  color: var(--text);
  font-family: 'corleone';
  margin: 16px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* Landing Page */
#landing-page {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0;
  padding: 0;
  background-color: var(--backgroundTranslucent);
}

#cartel-def-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 16px;
  margin-bottom: 16px;
  width: 660px;
  height: auto;
  border: 2px solid var(--primaryTranslucent);
}
#cartel-def-container h1 {
  font-family: 'corleone';
  font-size: 36px;
  letter-spacing: 2px;
  margin-top: 0;
  margin-bottom: 0;
}
#cartel-def-container h2 {
  font-family: 'corleoneDue';
  font-size: 20px;
  letter-spacing: 1px;
  margin-top: 0;
  margin-bottom: 0;
}
#cartel-def-container p {
  text-align: end;
  font-family: 'corleoneDue';
  font-size: 24px;
  letter-spacing: 2px;
  margin-top: 12px;
  margin-bottom: 0;
}

#pepe-gif {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 2px solid var(--primaryTranslucent);
  padding: 1px;
  height: auto;
  width: 690px;
}
#pepe-gif img {
  width: 100%;
  height: 100%;
  opacity: 0.88;
}

#close-landing-button {
  margin-top: 16px;
  padding: 4px 12px;
  font-family: 'corleoneDue';
  font-size: 36px;
  letter-spacing: 2px;
  color: var(--accent);
  background-color: var(--backgroundTranslucent);
  border: 2px solid var(--primaryTranslucent);
  cursor: pointer;
}

main {
  border: 2px solid var(--primaryTranslucent);
  width: 100%;
  height: 100%;
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* Header */
header {
  position: absolute;
  top: 0;
  margin-top: 16px;
  font-size: 56px;
  letter-spacing: 4px;
  color: var(--text);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.0),
                    0 22px 70px 4px rgba(0,0,0,0.55),
                    0 0 0 1px rgba(0, 0, 0, 0.0);
}

/* Main Content */
#main {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 16px;
  background-color: var(--backgroundTranslucent);
}
#main-container {
  width: 444px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 16px;
  border: 2px solid var(--primaryTranslucent);
  background-color: var(--backgroundTranslucent);
}

#contract-action {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  margin-bottom: 8px;
}
#contract-title {
  letter-spacing: 2px;
  font-family: 'corleoneDue';
  font-size: 24px;
  color: var(--primary);
  cursor: none;
}
#copy-ca-button {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-align: center;
  letter-spacing: 2px;
  font-family: 'corleoneDue';
  font-size: 24px;
  padding: 0;
  margin: 0;
  color: var(--primary);
  background: none;
  border: none;
  cursor: pointer;
}
#copy-ca-button:hover {
  color: var(--primaryTranslucent);
}
#copy-ca-button:active {
  color: var(--primary);
}
#contract-address {
  font-family: 'corleoneDue';
  letter-spacing: 2px;
  font-size: 20px;
  text-align: center;
  word-break: break-all;
}

#buy-action {
  margin-top: 16px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 16px;
  width: 100%;
}
#chart-button {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-align: center;
  letter-spacing: 2px;
  font-family: 'corleoneDue';
  font-size: 20px;
  padding: 4px 8px;
  color: var(--text);
  background-color: rgba(34, 44, 44, 0.88);
  border: 2px solid var(--primaryTranslucent);
  cursor: pointer;
}
#buy-button {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-align: center;
  letter-spacing: 2px;
  font-family: 'corleoneDue';
  font-size: 20px;
  padding: 4px 8px;
  color: var(--text);
  background-color: rgba(34, 44, 44, 0.88);
  border: 2px solid rgba(115, 139, 140, 0.88);
  cursor: pointer;
}
#buy-button:hover {
  border: 2px solid rgba(180, 205, 197, 0.88);
  color: var(--background);
  background-color: rgba(180, 205, 197, 0.88);
}
#buy-button:active {
  color: var(--text);
  background-color: rgba(34, 44, 44, 0.88);
}

/* Secondary Page */
#tokenomics {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 16px;
  background-color: var(--backgroundTranslucent);
}
#tokenomics-container {
  width: 444px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 16px;
  padding: 16px;
  border: 2px solid var(--primaryTranslucent);
  background-color: var(--backgroundTranslucent);
  letter-spacing: 2px;
  font-family: 'corleoneDue';
  font-size: 24px;
}
.proofBtn {
  border: none;
  background-color: var(--primaryTranslucent);
  color: var(--text);
  font-family: 'corleoneDue';
  text-align: center;
  letter-spacing: 2px;
  font-size: 20px;
  padding: 4px 8px;
  cursor: pointer;
}
.proofBtn:hover {
  background-color: var(--secondaryTranslucent);
}
.proofBtn:active {
  background-color: var(--primaryTranslucent);
}
#lp {
  color: var(--primary);
}
#lp, #mint, #freeze {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}


/* Footer */
footer {
  position: absolute;
  bottom: 0;
  margin-bottom: 16px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 492px;
  background-color: var(--backgroundTranslucent);
}

#music-widget {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-family: 'corleoneDue';
  font-size: 24px;
  color: var(--accent);
  background: none;
  padding: 4px 8px;
  cursor: pointer;
}
#music-widget:hover {
  color: var(--accentTranslucent);
}
#music-widget:active {
  color: var(--accent);
}
#music-icon {
  margin-right: 4px;
  height: 24px;
  width: auto;
}

.socials {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-family: 'corleoneDue';
  font-size: 24px;
  padding: 4px 8px;
  color: var(--text);
  background: none;
  border: none;
  cursor: pointer;
}
.socials:hover {
  color: var(--primaryTranslucent);
}
.socials:active {
  color: var(--text);
}

#switch-card {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-align: center;
  width: 104px;
  font-family: 'corleoneDue';
  font-size: 24px;
  color: var(--primary);
  background: none;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
}
#switch-card:hover {
  color: var(--secondaryTranslucent);
}
#switch-card:active {
  color: var(--primary);
}

/* mobile optimzations */
@media screen and (max-width: 801px) {
  #close-landing-button {
    font-size: 24px;
  }

  #cartel-def-container {
    width: 294px;
  }
  #cartel-def-container h1 {
    font-size: 28px;
    letter-spacing: 2px;
  }
  #cartel-def-container h2 {
    font-size: 16px;
    letter-spacing: 1px;
  }
  #cartel-def-container p {
    font-size: 16px;
    letter-spacing: 2px;
  }

  #pepe-gif { width: 324px; }

  header { font-size: 44px; }
  #main-container { width: 220px; }

  #contract-title { font-size: 20px; }
  #copy-ca-button { font-size: 20px; }
  #contract-address { font-size: 12px; }

  #chart-button { font-size: 20px; }
  #buy-button { font-size: 20px; }

  #tokenomics-container {
    width: 220px;
    letter-spacing: 2px;
    font-size: 16px;
  }
  .proofBtn {
    letter-spacing: 2px;
    font-size: 12px;
  }

  footer { width: 284px; }
  #music-widget {
    font-size: 20px;
    padding: 4px 8px;
  }
  #music-icon {
    margin-right: 4px;
    height: 20px;
  }
  .socials { font-size: 20px; }
  #switch-card {
    width: 92px;
    font-size: 20px;
    padding: 4px 8px;
  }
}

